# Ace

./: .gitignore  rule.md
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/ai/: bot.rs
client/src-tauri/src/game/: card.rs  engine.rs  mod.rs  types.rs
client/src/components/: BidPanel.css  BidPanel.tsx  Card.css  Card.tsx  GameBoard.css  GameBoard.tsx  HandCards.css  HandCards.tsx  PlayerCard.css  PlayerCard.tsx
client/src/hooks/: useGame.ts
client/src/services/: api.ts
client/src/styles/: index.css
client/src/types/: game.ts
deploy/: Dockerfile.client  Dockerfile.server  ace-server.service  docker-compose.yml  nginx.conf
deploy/nginx/: default.conf  nginx.prod.conf
deploy/scripts/: backup.sh  deploy.sh  monitor.sh
deploy/server/: Dockerfile
docs/superpowers/plans/: 2026-03-31-tengchong-baifen-backend-implementation.md  2026-03-31-tengchong-baifen-implementation.md
docs/superpowers/specs/: 2026-03-31-tengchong-baifen-backend-design.md  2026-03-31-tengchong-baifen-game-design.md  2026-04-01-deployment-ops-guide.md
server/: Cargo.toml
server/src/: lib.rs  main.rs  state.rs
server/src/auth/: handler.rs  service.rs
server/src/game/: handler.rs  mod.rs
server/src/room/: handler.rs  service.rs
server/src/user/: handler.rs  mod.rs  service.rs
server/src/ws/: handler.rs
