[package]
name = "ace-server"
version = "1.0.0"
edition = "2021"

[lib]
name = "ace_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"